wip change translations

--- a/website/templates/common/footer.pug
+++ b/website/templates/common/footer.pug
@@ -1,12 +1,12 @@
-p= __("Copyright 2024-2025 Podoma - Développé sous licence libre AGPL 3.0")
+p= __("Copyright 2024-2025 Podoma - Released under AGPL 3.0 license")
 div.container.text-left
 	div.row
 		div.col-12.col-md-6.mb-2
 			a(href="https://openstreetmap.fr/" target="_blank")
-				| #{__("Un projet supporté par l'association")}
+				| #{__("Supported by")}
 				img.d-block(src="/images/osmfr.svg" alt="OpenStreetMap France" style="max-height: 70px; max-width: 100%")
 
 		div.col-12.col-md-6.mb-2
 			a(href="https://digitalprinciples.org/" target="_blank")
-				| #{__("Ce projet adhère aux")}
-				img.d-block(src="/images/pdd.png" alt=__("Principes pour le développement numérique") style="max-height: 70px; max-width: 100%")
+				| #{__("Adheres to")}
+				img.d-block(src="/images/pdd.png" alt=__("Principles for digital development") style="max-height: 70px; max-width: 100%")
