--- a/website/templates/components/wordcloud.pug
+++ b/website/templates/components/wordcloud.pug
@@ -15,7 +15,7 @@ script.
 				return size * (window.devicePixelRatio || 1);
 			},
 			color: function (word, weight) {
-				return word === "#{__("Merci !")}" ? "red" : "gray";
+				return word === "#{__("Thanks!")}" ? "red" : "gray";
 			},
 			rotateRatio: 0,
 			backgroundColor: '#f6f6f6',
