--- a/website/templates/pages/about.pug
+++ b/website/templates/pages/about.pug
@@ -3,8 +3,8 @@ extends ../layout.pug
 
 block navbar
 	a(href="#about")
-		i.fa.fa-flag(title=__("A propos"))
-		span= __("A propos")
+		i.fa.fa-flag(title=__("About"))
+		span= __("About")
 
 
 block content
