--- a/website/templates/pages/maintenance.pug
+++ b/website/templates/pages/maintenance.pug
@@ -4,9 +4,9 @@ block content
 	div.container.mt-4.mb-5
 		h2.mb-2
 			i.fa.fa-wrench.mr-2
-			| #{__("Maintenance en cours")}
+			| #{__("Maintenance in progress")}
 
-		p= __("Le site est en cours de maintenance, la magie opère en coulisses !")
+		p= __("The website is in maintenance, some magic happening behind the scenes!")
 			br
-			= __("Veuillez réessayer un peu plus tard, merci pour votre compréhension.")
+			= __("Please try again later, thanks for your understanding.")
 
