--- a/website/templates/components/map.pug
+++ b/website/templates/components/map.pug
@@ -1,20 +1,20 @@
 div#map.map-main
 
-div.alert.alert-warning.map-alert.font-weight-bold.show-low-zoom= __("Zoomez ou lancez une recherche pour commencer")
+div.alert.alert-warning.map-alert.font-weight-bold.show-low-zoom= __("Zoom in or search a place to start")
 
 div#map-alert-loading.alert.alert-info.map-alert.font-weight-bold.d-none
 	div.spinner-border.text-primary.align-middle.mr-2(role="status" style="width: 48px; height: 48px")
-	| #{__("Chargement en cours")}
+	| #{__("Loading in progress")}
 
 div#edit-feature-location.alert.alert-primary.map-alert.d-none
-	| #{__("Placer à la position exacte")}
+	| #{__("Move to exact location")}
 	div.btn-group.btn-block.mt-1
 		button.btn.btn-success.w-50(role="button")
 			i.fa.fa-check.mr-2
-			| #{__("Valider")}
+			| #{__("Validate")}
 		button.btn.btn-warning.w-50(role="button")
 			i.fa.fa-ban.mr-2
-			| #{__("Annuler")}
+			| #{__("Cancel")}
 
 
 //- This runs on client
