--- a/website/templates/components/pictures.pug
+++ b/website/templates/components/pictures.pug
@@ -53,11 +53,11 @@ script.
 
 				carousel.innerHTML = `<a class="carousel-control-prev" href="#${carousel.id}" role="button" data-slide="prev">
 						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">#{__("Précédent")}</span>
+						<span class="sr-only">#{__("Previous")}</span>
 					</a>
 					<a class="carousel-control-next" href="#${carousel.id}" role="button" data-slide="next">
 						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">#{__("Suivant")}</span>
+						<span class="sr-only">#{__("Next")}</span>
 					</a>`;
 
 				const carouselIndicators = document.createElement("ol");
