--- a/website/templates/pages/map.pug
+++ b/website/templates/pages/map.pug
@@ -1,6 +1,6 @@
 //- Original template from https://getbootstrap.com/docs/4.5/examples/blog/
 doctype html
-html(lang="fr")
+html(lang="en")
 	head
 		include ../common/head.pug
 
