--- a/website/templates/style.css
+++ b/website/templates/style.css
@@ -8,14 +8,21 @@ body {
 }
 
 
-.blog-header-logo h1 {
-	font-size: 3rem;
-	display: inline;
-	vertical-align: middle;
-	margin-left: 20px;
+nav.navbar-pdm a h1,
+.blog-header-logo h1,
+a.navbar-brand h1 {
 	color: #1562ac;
 	font-weight: bold;
+	font-size: 1.3rem;
+	display: inline;
+	vertical-align: middle;
+	margin-left: 10px;
 }
+
+.blog-header-logo h1 {
+	font-size: 3rem;
+}
+
 a.blog-header-logo:hover {
 	text-decoration: none;
 }
