--- a/website/templates/pages/project.pug
+++ b/website/templates/pages/project.pug
@@ -61,8 +61,8 @@ block content
 				div#word-cloud.w-100.m-0(style="height: 250px")
 				script.
 					const wordsTmp = [];
-					for(let i=0; i < 100; i++) { wordsTmp.push(["#{__("Merci")}", Math.floor(Math.random()*30)]); }
-					wordsTmp.unshift(["#{__("Merci !")}", 50]);
+					for(let i=0; i < 100; i++) { wordsTmp.push(["#{__("Thanks")}", Math.floor(Math.random()*30)]); }
+					wordsTmp.unshift(["#{__("Thanks!")}", 50]);
 					createWordCloud(document.getElementById("word-cloud"), wordsTmp);
 
 				div.text-center
