Add new school project

--- a/website/templates/pages/project.pug
+++ b/website/templates/pages/project.pug
@@ -96,8 +96,8 @@ block content
 							i.fa.fa-book.mr-2
 							| #{__("Full documentation")}
 					if links.osmforum
-						a.btn.btn-secondary.btn.lg.m-1(href=links.osmforum target="_blank" role="button")
-						i.fa.fa-comments.mr-2
+						a.btn.btn-secondary.btn-lg.m-1(href=links.osmforum target="_blank" role="button")
+							i.fa.fa-comments.mr-2
 							| #{__("Discuss")}
 					if links.osmblog
 						a.btn.btn-secondary.btn-lg.m-1(href=links.osmblog target="_blank" role="button")
