Add new translations, cancel repo URL updates

--- a/website/templates/components/edit_button.pug
+++ b/website/templates/components/edit_button.pug
@@ -168,7 +168,7 @@ script.
 			editWithPanoramax.classList.add("dropdown-item", "d-none", "d-sm-block");
 			editWithPanoramax.href = `#{CONFIG.PANORAMAX_URL}/?focus=map&map=18/${lat}/${lng}`;
 			editWithPanoramax.target = "_blank";
-			editWithPanoramax.appendChild(document.createTextNode("#{__("Via Panoramax")}"));
+			editWithPanoramax.appendChild(document.createTextNode("#{__("With Panoramax")}"));
 			dropdown.appendChild(editWithPanoramax);
 
 			if(options.onExternalEdit) {
